tests/invalid/for_loop_complex_target/main.py
def run_case() -> None:
    xs: list[int] = [1, 2, 3]

    for a, b in xs:
        print(a)

if __name__ == "__main__":
    run_case()
